syntax = "proto3";

package com.autonomous.api.grpc;

option java_multiple_files = true;
option java_package = "com.autonomous.api.grpc";
option java_outer_classname = "MissionProto";

import "google/protobuf/timestamp.proto";

// Mission service definition
service MissionService {
    // Create a new mission
    rpc CreateMission(CreateMissionRequest) returns (CreateMissionResponse);
    
    // Get mission details
    rpc GetMission(GetMissionRequest) returns (GetMissionResponse);
    
    // Update mission status
    rpc UpdateMissionStatus(UpdateMissionStatusRequest) returns (UpdateMissionStatusResponse);
    
    // Cancel mission
    rpc CancelMission(CancelMissionRequest) returns (CancelMissionResponse);
    
    // List all missions
    rpc ListMissions(ListMissionsRequest) returns (ListMissionsResponse);
}

// Mission request
message CreateMissionRequest {
    string mission_id = 1;
    string mission_type = 2;
    string description = 3;
    MissionParameters parameters = 4;
    repeated Waypoint waypoints = 5;
    google.protobuf.Timestamp start_time = 6;
    google.protobuf.Timestamp end_time = 7;
}

// Mission parameters
message MissionParameters {
    double max_speed_kmh = 1;
    double max_altitude_m = 2;
    double payload_kg = 3;
    string weather_condition = 4;
    string risk_level = 5;
}

// Waypoint
message Waypoint {
    string waypoint_id = 1;
    double latitude = 2;
    double longitude = 3;
    double altitude = 4;
    string waypoint_type = 5;
}

// Create mission response
message CreateMissionResponse {
    string mission_id = 1;
    string status = 2;
    string message = 3;
    google.protobuf.Timestamp created_at = 4;
}

// Get mission request
message GetMissionRequest {
    string mission_id = 1;
}

// Get mission response
message GetMissionResponse {
    string mission_id = 1;
    string mission_type = 2;
    string description = 3;
    MissionParameters parameters = 4;
    repeated Waypoint waypoints = 5;
    google.protobuf.Timestamp start_time = 6;
    google.protobuf.Timestamp end_time = 7;
    string status = 8;
    string current_waypoint = 9;
    double progress_percentage = 10;
}

// Update mission status request
message UpdateMissionStatusRequest {
    string mission_id = 1;
    string status = 2;
    string current_waypoint = 3;
    double progress_percentage = 4;
    string error_message = 5;
}

// Update mission status response
message UpdateMissionStatusResponse {
    string mission_id = 1;
    string status = 2;
    string message = 3;
    google.protobuf.Timestamp updated_at = 4;
}

// Cancel mission request
message CancelMissionRequest {
    string mission_id = 1;
    string reason = 2;
}

// Cancel mission response
message CancelMissionResponse {
    string mission_id = 1;
    string status = 2;
    string message = 3;
    google.protobuf.Timestamp cancelled_at = 4;
}

// List missions request
message ListMissionsRequest {
    int32 page_size = 1;
    string page_token = 2;
    string mission_type = 3;
    string status = 4;
}

// List missions response
message ListMissionsResponse {
    repeated MissionInfo missions = 1;
    string next_page_token = 2;
}

// Mission info
message MissionInfo {
    string mission_id = 1;
    string mission_type = 2;
    string description = 3;
    string status = 4;
    google.protobuf.Timestamp start_time = 5;
    google.protobuf.Timestamp end_time = 6;
    double progress_percentage = 7;
}