package com.autonomous.api.grpc

import io.grpc.stub.StreamObserver
import net.devh.boot.grpc.server.service.GrpcService

@GrpcService
class MissionServiceImpl : MissionServiceGrpc.MissionServiceImplBase() {

    override fun createMission(request: CreateMissionRequest, responseObserver: StreamObserver<CreateMissionResponse>) {
        // Implementation
        val response = CreateMissionResponse.newBuilder()
            .setMissionId(request.missionId)
            .setStatus("CREATED")
            .setMessage("Mission created successfully")
            .setCreatedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun getMission(request: GetMissionRequest, responseObserver: StreamObserver<GetMissionResponse>) {
        // Implementation
        val response = GetMissionResponse.newBuilder()
            .setMissionId(request.missionId)
            .setMissionType("DELIVERY")
            .setDescription("Test mission")
            .setParameters(MissionParameters.getDefaultInstance())
            .addAllWaypoints(emptyList())
            .setStartTime(com.google.protobuf.Timestamp.getDefaultInstance())
            .setEndTime(com.google.protobuf.Timestamp.getDefaultInstance())
            .setStatus("PENDING")
            .setCurrentWaypoint("")
            .setProgressPercentage(0.0)
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun updateMissionStatus(request: UpdateMissionStatusRequest, responseObserver: StreamObserver<UpdateMissionStatusResponse>) {
        // Implementation
        val response = UpdateMissionStatusResponse.newBuilder()
            .setMissionId(request.missionId)
            .setStatus(request.status)
            .setMessage("Mission status updated")
            .setUpdatedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun cancelMission(request: CancelMissionRequest, responseObserver: StreamObserver<CancelMissionResponse>) {
        // Implementation
        val response = CancelMissionResponse.newBuilder()
            .setMissionId(request.missionId)
            .setStatus("CANCELLED")
            .setMessage("Mission cancelled")
            .setCancelledAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun listMissions(request: ListMissionsRequest, responseObserver: StreamObserver<ListMissionsResponse>) {
        // Implementation
        val response = ListMissionsResponse.newBuilder()
            .addAllMissions(emptyList())
            .setNextPageToken("")
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }
}